--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+MIN_SDK_VERSION= 26
+TARGRT_SDK_VERSION= 28
+COMPILE_SDK_VERSION= 28
 
+LOGIN_IS_APPLICATION=false
+MEMBER_IS_APPLICATION=false
